[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppvo"
version = "0.1.0"
description = "Proposal-Policy Visual Odometry"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
